<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0fcfb"
    tools:context=".ElementTypeLaunch">

    <TextView
        android:id="@+id/game_mode3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/element_type_name"
        android:textAlignment="center"
        android:textColor="#1E103B"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_mode3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/instruction3"
        android:fontFamily="@font/courier_prime"
        android:textAlignment="center"
        android:textColor="#616068"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/proceedbtn3"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#f2ffe2"
            android:text="@string/proceed"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/courier_prime"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

        <Button
            android:id="@+id/backbtn3"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="#F9C6CC"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/courier_prime"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

    </LinearLayout>

</RelativeLayout>
