<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8D0"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/the_nelement_ngame"
        android:textAlignment="center"
        android:textColor="#1E103B"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_game"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/play"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textColor="#616068"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/playbtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#A0FF9B"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

        <Button
            android:id="@+id/exitbtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="#F9C6CC"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

    </LinearLayout>

</RelativeLayout>